pdfsam-gui ported to jdk17 and junit5, still missing module-info.java